Añadir base para la gestión de webhooks
