# code/api/rest-server/src/main/kotlin/io/juancrrn/balancerbankingconnector/restserver/api/requests/ext/NotifyUpdateRequestExt.kt
@@ -1,0 +1,18 @@
+package io.juancrrn.balancerbankingconnector.restserver.api.requests.ext
+
+import io.juancrrn.balancerbankingconnector.commands.NotifyUpdateCommand
+import io.juancrrn.balancerbankingconnector.restserver.api.models.NotifyUpdateRequestBody
+
+fun NotifyUpdateRequestBody.toCommand(): NotifyUpdateCommand {
+    return NotifyUpdateCommand(
+        webhookCode = webhookCode,
+        webhookType = webhookType,
+        itemId = itemId,
+        environment = environment,
+        initialUpdateComplete = initialUpdateComplete,
+        historicalUpdateComplete = historicalUpdateComplete,
+        accountIds = accountIds,
+        newTransactions = newTransactions,
+        removedTransactions = removedTransactions,
+    )
+}
